# Automated-API-Testing

./: .gitignore  CHANGELOG_SUMMARY.md  README.md  dummy_api.json  pyproject.toml  run_e2e.py
dummyGitRepo/tests/endpoints/: get_users.py  post_users.py
src/api_test_gen/: cli.py  server.py
src/api_test_gen/diff/: __init__.py  engine.py
src/api_test_gen/generator/: __init__.py  assertions.py  engine.py  payloads.py  report_generator.py
src/api_test_gen/ir/: __init__.py  models.py
src/api_test_gen/negative/: engine.py  error_assertion_generator.py  mutation_engine.py  security_negative_tests.py
src/api_test_gen/parser/: __init__.py  openapi.py
src/api_test_gen/state/: repo_manager.py
tests/: test_diff.py  test_enhanced_features.py  test_error_assertion_generator.py  test_generation.py  test_generator_engine.py  test_mutation_engine.py  test_negative_engine.py  test_parser.py  test_payloads.py  test_repo_manager.py  test_security_negative_tests.py
