[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-test-gen"
version = "0.1.0"
description = "A service that generates and updates API tests from API documentation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "jsonschema>=4.19.0",
    "click>=8.1.0",
]

[project.scripts]
apitestgen = "api_test_gen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]
web = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]
